force-app/main/default/objects/Envio_sin_Cargo__c/Envio_sin_Cargo__c.object-meta.xml
<CustomObject>
    <label>Envío sin cargo</label>
    <nameField>
        <displayFormat>KIT-{00000}</displayFormat>
        <label>Nombre de Envio sin Cargo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envíos sin cargo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>