force-app/main/default/objects/Envio_sin_Cargo__c/fields/Adicional_Kit__c.field-meta.xml
<CustomField>
    <fullName>Adicional_Kit__c</fullName>
    <label>Adicional Kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balanza Metabólicos</fullName>
            </value>
            <value>
                <fullName>Balanza Ketocal Oral</fullName>
            </value>
            <value>
                <fullName>Balanza Ketocal Enteral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>