force-app/main/default/objects/Envio_sin_Cargo__c/fields/Alerta_a_KAM_ya_enviada__c.field-meta.xml
<CustomField>
    <fullName>Alerta_a_KAM_ya_enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta a KAM ya enviada</label>
    <type>Checkbox</type>
</CustomField>