force-app/main/default/objects/Envio_sin_Cargo__c/fields/Autoriza_Envio__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_Envio__c</fullName>
    <label>Autoriza Envio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razon_de_envio__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAEDs</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Adultos &amp; Nicho</fullName>
            </value>
            <value>
                <fullName>Best Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>