force-app/main/default/objects/Envio_sin_Cargo__c/fields/Centro_de_tratamiento_activo__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_tratamiento_activo__c</fullName>
    <label>Centro de tratamiento activo</label>
    <length>254</length>
    <type>Text</type>
</CustomField>