force-app/main/default/objects/Envio_sin_Cargo__c/fields/Cod__c.field-meta.xml
<CustomField>
    <fullName>Cod__c</fullName>
    <formula>CASE(Organizacion__c, &apos;NUBA&apos;, &apos;5771&apos;, &apos;AMN&apos;, &apos;5800&apos;, &apos;BEC&apos;, &apos;5830&apos;,&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod</label>
    <type>Text</type>
</CustomField>