force-app/main/default/objects/Envio_sin_Cargo__c/fields/Codigo_Channel__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Channel__c</fullName>
    <formula>CASE(Organizacion__c, &apos;AMN&apos;, &apos;05&apos;, &apos;NUBA&apos;, &apos;05&apos;, &apos;BEC&apos;, &apos;06&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Channel</label>
    <type>Text</type>
</CustomField>