force-app/main/default/objects/Envio_sin_Cargo__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <formula>Paciente__r.Codigo_postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Postal</label>
    <type>Text</type>
</CustomField>