force-app/main/default/objects/Envio_sin_Cargo__c/fields/Codigo_Razon_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Razon_de_Envio__c</fullName>
    <formula>IF(
	AND(
		OR(
			TEXT(Organizacion__c) = &apos;AMN&apos;, 
			TEXT(Organizacion__c) = &apos;NUBA&apos;
		),  
		TEXT(Razon_de_envio__c) = &apos;MM Excepcion&apos;,
		TEXT(Autoriza_Envio__c) = &apos;PAEDs&apos;
	),
	&apos;SMP&apos;,
	IF(
		AND(
			OR(
				TEXT(Organizacion__c) = &apos;AMN&apos;, 
				TEXT(Organizacion__c) = &apos;NUBA&apos;
			),
			TEXT(Razon_de_envio__c) = &apos;MM Excepcion&apos;,
			TEXT(Autoriza_Envio__c) = &apos;Adultos &amp; Nicho&apos;
		), 
		&apos;SMA&apos;,
		IF(
			AND(
				TEXT(Organizacion__c) = &apos;NUBA&apos;,
				TEXT(Razon_de_envio__c) = &apos;MM Excepcion&apos;,
				TEXT(Autoriza_Envio__c) = &apos;Consumer&apos;
			),
			&apos;SMA&apos;,
			IF(
				AND(
					TEXT(Organizacion__c) = &apos;NUBA&apos;,
					TEXT(Razon_de_envio__c) = &apos;Kit de Inicio&apos;,
					TEXT(Autoriza_Envio__c) = &apos;Consumer&apos;
				), 
				&apos;KIT&apos;,
				IF(
					AND(
						OR(
							TEXT(Organizacion__c) = &apos;AMN&apos;, 
							TEXT(Organizacion__c) = &apos;NUBA&apos;
						), 
						TEXT(Razon_de_envio__c) = &apos;Kit de Inicio&apos;,
						TEXT(Autoriza_Envio__c) = &apos;PAEDs&apos;
					), 
					&apos;KIS&apos;,
					IF(
						AND(
							OR(
								TEXT(Organizacion__c) = &apos;AMN&apos;, 
								TEXT(Organizacion__c) = &apos;NUBA&apos;
							),
							TEXT(Razon_de_envio__c) = &apos;Kit de Inicio&apos;, 
							TEXT(Autoriza_Envio__c) = &apos;Adultos &amp; Nicho&apos;
						), 
						&apos;KIR&apos;,
						IF(
							AND(
								TEXT(Organizacion__c) = &apos;BEC&apos;,
								TEXT(Razon_de_envio__c) = &apos;BEC-EnvÍos&apos;,
								TEXT(Autoriza_Envio__c) = &apos;Best Care&apos;
							), 
							&apos;BCE&apos;,
							&apos;&apos;
						)
					)
				)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Razon de Envio</label>
    <type>Text</type>
</CustomField>