force-app/main/default/objects/Envio_sin_Cargo__c/fields/Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico__c</fullName>
    <formula>Paciente__r.E_Mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo Electronico</label>
    <type>Text</type>
</CustomField>