force-app/main/default/objects/Envio_sin_Cargo__c/fields/Email_de_usuario_KAM__c.field-meta.xml
<CustomField>
    <fullName>Email_de_usuario_KAM__c</fullName>
    <label>Email de usuario KAM</label>
    <type>Email</type>
</CustomField>