force-app/main/default/objects/Envio_sin_Cargo__c/fields/Es_De_Portal_Pacientes__c.field-meta.xml
<CustomField>
    <fullName>Es_De_Portal_Pacientes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si es el kit de inicio que se debe generar por el alta de paciente a través del portal</description>
    <label>Es De Portal Pacientes</label>
    <type>Checkbox</type>
</CustomField>