force-app/main/default/objects/Envio_sin_Cargo__c/fields/Estado_del_envio__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_envio__c</fullName>
    <label>Estado del envio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingresado</fullName>
                <default>true</default>
                <label>Ingresado</label>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Procesado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Ajuste Financiero</fullName>
                <isActive>false</isActive>
                <label>Ajuste Financiero</label>
            </value>
            <value>
                <fullName>Cerrado</fullName>
                <isActive>false</isActive>
                <label>Cerrado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>