force-app/main/default/objects/Envio_sin_Cargo__c/fields/Fecha_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_despacho__c</fullName>
    <defaultValue>(TODAY())</defaultValue>
    <label>Fecha de despacho</label>
    <type>Date</type>
</CustomField>