force-app/main/default/objects/Envio_sin_Cargo__c/fields/Fecha_de_despacho_formato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_despacho_formato__c</fullName>
    <formula>TEXT(YEAR(Fecha_de_despacho__c ))+

IF(MONTH(Fecha_de_despacho__c ) &lt;10,
&apos;0&apos;+TEXT(MONTH(Fecha_de_despacho__c )),
TEXT(MONTH(Fecha_de_despacho__c )))+

IF(DAY(Fecha_de_despacho__c ) &lt;10,
&apos;0&apos;+TEXT(DAY(Fecha_de_despacho__c )),
TEXT(DAY(Fecha_de_despacho__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de despacho</label>
    <type>Text</type>
</CustomField>