force-app/main/default/objects/Envio_sin_Cargo__c/fields/Formula_de_producto_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Formula_de_producto_de_envio__c</fullName>
    <label>Formula de producto de envío</label>
    <length>255</length>
    <type>Text</type>
</CustomField>