force-app/main/default/objects/Envio_sin_Cargo__c/fields/ID_Paciente__c.field-meta.xml
<CustomField>
    <fullName>ID_Paciente__c</fullName>
    <formula>Paciente__r.ID_de_paciente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Paciente</label>
    <type>Text</type>
</CustomField>