force-app/main/default/objects/Envio_sin_Cargo__c/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <formula>Paciente__r.Localidad_look__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Localidad</label>
    <type>Text</type>
</CustomField>