force-app/main/default/objects/Envio_sin_Cargo__c/fields/Municipalidad__c.field-meta.xml
<CustomField>
    <fullName>Municipalidad__c</fullName>
    <formula>Paciente__r.Municipio_localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipalidad</label>
    <type>Text</type>
</CustomField>