force-app/main/default/objects/Envio_sin_Cargo__c/fields/N_mero_de_Kit__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Kit__c</fullName>
    <label>Número de Kit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>