force-app/main/default/objects/Envio_sin_Cargo__c/fields/N_Shipt_To__c.field-meta.xml
<CustomField>
    <fullName>N_Shipt_To__c</fullName>
    <formula>Paciente__r.N_SHIP_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N Shipt To</label>
    <type>Text</type>
</CustomField>