force-app/main/default/objects/Envio_sin_Cargo__c/fields/Nombre_del_paciente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_paciente__c</fullName>
    <formula>Paciente__r.LastName + &apos; &apos;+ IF(Paciente__r.FirstName &lt;&gt; &apos;&apos;, Paciente__r.FirstName, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del paciente</label>
    <type>Text</type>
</CustomField>