force-app/main/default/objects/Envio_sin_Cargo__c/fields/Obra_social_para_KAM__c.field-meta.xml
<CustomField>
    <fullName>Obra_social_para_KAM__c</fullName>
    <formula>Paciente__r.Obra_social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obra social para KAM</label>
    <type>Text</type>
</CustomField>