force-app/main/default/objects/Envio_sin_Cargo__c/fields/Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Organizacion__c</fullName>
    <label>Organización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMN</fullName>
            </value>
            <value>
                <fullName>NUBA</fullName>
            </value>
            <value>
                <fullName>BEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>