force-app/main/default/objects/Envio_sin_Cargo__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paciente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Envios_sin_Cargo</relationshipName>
    <type>Lookup</type>
</CustomField>