force-app/main/default/objects/Envio_sin_Cargo__c/fields/Producto_de_m_dulo_del__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_m_dulo_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de módulo</label>
    <referenceTo>Producto_de_modulo__c</referenceTo>
    <relationshipName>Envios_sin_Cargo_del</relationshipName>
    <type>Lookup</type>
</CustomField>