force-app/main/default/objects/Envio_sin_Cargo__c/fields/Profesional_de_tratamiento_activo__c.field-meta.xml
<CustomField>
    <fullName>Profesional_de_tratamiento_activo__c</fullName>
    <label>Profesional de tratamiento activo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>