force-app/main/default/objects/Envio_sin_Cargo__c/fields/Programa_Q__c.field-meta.xml
<CustomField>
    <fullName>Programa_Q__c</fullName>
    <label>Programa / Q</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1 - 2021</fullName>
                <default>true</default>
                <label>Q1 - 2021</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>