force-app/main/default/objects/Envio_sin_Cargo__c/fields/Q__c.field-meta.xml
<CustomField>
    <fullName>Q__c</fullName>
    <label>Q</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q2</fullName>
                <default>true</default>
                <label>Q2</label>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>