force-app/main/default/objects/Envio_sin_Cargo__c/fields/Razon_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Razon_de_envio__c</fullName>
    <label>Razon de envÍo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kit de Inicio</fullName>
            </value>
            <value>
                <fullName>MM Excepcion</fullName>
            </value>
            <value>
                <fullName>BEC-EnvÍos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>