force-app/main/default/objects/Envio_sin_Cargo__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <formula>Paciente__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefono</label>
    <type>Text</type>
</CustomField>