force-app/main/default/objects/Envio_sin_Cargo__c/fields/Tipo_de_direccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_direccion__c</fullName>
    <formula>TEXT(Paciente__r.Tipo_de_direccion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de direccion</label>
    <type>Text</type>
</CustomField>