force-app/main/default/objects/Envio_sin_Cargo__c/fields/Tipo_de_Envio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Envio__c</fullName>
    <label>Tipo de Envio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Best Care</fullName>
            </value>
            <value>
                <fullName>Q1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>