force-app/main/default/objects/Envio_sin_Cargo__c/fields/Valores__c.field-meta.xml
<CustomField>
    <fullName>Valores__c</fullName>
    <label>Valores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMN</fullName>
            </value>
            <value>
                <fullName>NUBA</fullName>
            </value>
            <value>
                <fullName>Best Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>