force-app/main/default/objects/Envio_sin_Cargo__c/fields/Xml_ya_generado__c.field-meta.xml
<CustomField>
    <fullName>Xml_ya_generado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xml ya generado</label>
    <type>Checkbox</type>
</CustomField>