force-app/main/default/objects/Envio_sin_Cargo__c/recordTypes/Envio_Sin_Cargo.recordType-meta.xml
<RecordType>
    <fullName>Envio_Sin_Cargo</fullName>
    <active>true</active>
    <label>Envio Sin Cargo</label>
</RecordType>