force-app/main/default/objects/Envio_sin_Cargo__c/recordTypes/EYN.recordType-meta.xml
<RecordType>
    <fullName>EYN</fullName>
    <active>true</active>
    <label>EYN</label>
</RecordType>