force-app/main/default/objects/Envio_sin_Cargo__c/validationRules/Envio_Reservado.validationRule-meta.xml
<ValidationRule>
    <fullName>Envio_Reservado</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;,

IF(OR( ISPICKVAL(Estado_del_envio__c, &apos;Reservado&apos;),

ISPICKVAL(Estado_del_envio__c, &apos;Procesado&apos;)) ,
AND (NOT (LastModifiedDate &lt;&gt; LastModifiedDate),
OR (
NOT (ISCHANGED (Estado_del_envio__c)))),
null)
)</errorConditionFormula>
    <errorMessage>No se puede modificar un Envió  sin cargo Reservado o ya Procesado.</errorMessage>
</ValidationRule>