force-app/main/default/objects/Envio_sin_Cargo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Formula_de_producto_de_envio__c</columns>
    <columns>Alerta_a_KAM_ya_enviada__c</columns>
    <columns>Estado_del_envio__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>