force-app/main/default/objects/Envio_sin_Cargo__c/listViews/Vani_PSP.listView-meta.xml
<ListView>
    <fullName>Vani_PSP</fullName>
    <columns>NAME</columns>
    <columns>Paciente__c</columns>
    <columns>N_Shipt_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Estado_del_envio__c</columns>
    <columns>Area_Terapeutica__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cola PSP</label>
</ListView>